<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ayo_Dolan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">Wisata</string>
    <string name="title_activity_main_activity3">WisataMalang</string>
    <string name="title_activity_main_activity4">WisataBlitar</string>
    <string name="balekambang">		Pantai Balekambang adalah sebuah pantai di pesisir selatan yang terletak di tepi Samudera Indonesia secara administratif masuk wilayah Dusun Sumber Jambe, Desa Srigonco, Kecamatan Bantur, Kabupaten Malang, Jawa Timur.
        Balekambang merupakan salah satu wisata andalan Kabupaten Malang sejak 1985 hingga kini.
        		Daya tarik Balekambang utamanya tentu panorama alam, gelombang ombak yang memanjang hampir dua kilometer, serta hamparan pasir nan luas. Area pasir putih terlihat bersih dari sampah maupun kotoran sehingga cukup nyaman bagi pengunjung untuk bermain dan berolahraga. Bahkan tak jarang di pantai ini menjadi tempat latihan sejumlah klub sepak bola seperti Arema dan Persema.

		Harga tiket masuk Pantai Balekambang rata-rata HTM Rp 20.000</string>
		
    <string name="tigawarna">		Pantai Tiga warna malang ini terletak di desa tambak rejo, sendang biru Kabupaten Malang, Jawa Timur.
        		Pantai ini memiliki keindahan yang begitu memukau, dengan pasir putih yang lembut, air laut 3 warna yang jernih, terumbu karang dan dikelilingi oleh hutan lindung. Di tempat wisata ini terdapat konservasi hutan lindung yang dikelola oleh Bhakti Alam dan dikelola langsung oleh warga sekitar pantai. Pantai 3 warna terletak di sebelah pantai sendangbiru.
        		Pantai sendabiru merupakan pintu masuk ke wisata cagar alam pulau sempu, dengan garis pantai yang cukup panjang membuat tempat ini asik untuk bersantai atau sekedar bermain air.

		Harga tiket masuk Pantai Tiga Warna rata-rata HTM Rp.5.000
		Untuk sampai ke Pantai 3 Warna anda harus menggunakan guide. Biaya guide sekitar 100 ribu per 10 orangnya.</string>
		
    <string name="alun">		Alun-alun kota Malang merupakan ikon kota Malang yang juga sebagai tempat rekreasi yang tidak pernah sepi. Ada saja rombongan atau perorangan yang datang ke alun-alun ini. Mungkin karena letaknya yang strategis juga, tepat di jantung kota Malang dan dikelilingi oleh beberapa pusat perbelanjaan terkemuka seperti Ramayana, Sarinah, Mitra, Gajah Mada Plaza serta Malang Plaza.
        Selain itu, alun-alun ini juga berlokasi dekat dengan instansi pemerintahan serta beberapa fasilitas umum seperti hotel, kantor pos, bank, masjid, dan gereja.</string>
        
    <string name="sumber">		Sumber Udel Water Park adalah salah satu kolam renang tertua dan terbesar di Kota Blitar. Beberapa tahun yang lalu telah mengalami renovasi sehingga kolam renang Sumber Udel atau yang lebih kita kenal dengan Sumber Udel Water Park makin cantik dan makin lengkap fasilitasnya.
        Sumber udel Water Park berlokasi di Jalan Kalibrantas, Kepanjenkidul, Kota Blitar atau sebelah barat Stadion Kota Blitar sekitar 200 m, sangat mudah di jangkau karena berlokasi di pusat Kota Blitar.

		Harga tiket masuk Sumber Udel Water Park rata-rata HTM Rp 15.000</string>
		
    <string name="makam">		Makam Bung Karno, Wisata Wajib di Blitar.
        		Makam Bung Karno merupakan salah satu icon wisata di Blitar. Sebuah icon wisata yang wajib anda kunjungi apabila anda bepergian ke Blitar. Tidak heran apabila Blitar juga mendapat julukan Bumi Bung Karno, karena memang Bung Karno dikebumikan di Kota Patria nan kecil ini. Selain makam Bung Karno, anda juga bisa melihat berbagai macam dokumentasi Bung Karno berupa foto di museum yang masih terletak di Komplek Makam Bung Karno.</string>
        		
    <string name="sirah">		Sirah Kencong merupakan nama sebuah daerah di Perkebunan Teh Bantran Wlingi yang membutuhkan waktu tempuh sekitar 90 menit daripusat kota Blitar. Jarak dari Blitar kota ke Sirah Kencong sebenarnya tidak terlalu jauh, namun akses jalan yang sulit membuat perjalanan menjadi lambat. Karena Sirah kencong sendiri berada di area pegunungan yang sulit dijangkau.

		Harga tiket masuk Perkebunan Teh Sirah Kencong rata-rata HTM Rp.5.000</string>
    <string name="title_activity_login_data_base_adapter">LoginDataBaseAdapter</string>
    <string name="title_activity_data_base_helper">DataBaseHelper</string>
    <string name="title_activity_sign_up">SignUPActivity</string>

</resources>